<?xml version="1.0"?>
<package format="2">
  <name>px4ctrl</name>
  <version>4.1.0</version>
  <description>
    A ROS package as an interface for drone control with PX4 via MAVROS.
  </description>

  <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>

  <!-- EDIT: License -->
  <license>GPLv3</license>

  <url type="repository">https://github.com/HuaYuXiao/px4ctrl.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>quadrotor_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
